--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(LIBSFP)
 
 include_directories(${DOF_FIRMWARE_SOURCE_DIR}/inc)
 
-add_library(sfp STATIC net_byte_order.c serial_framing_protocol.c)
+add_library(sfpStatic STATIC net_byte_order.c serial_framing_protocol.c)
 add_library(sfp SHARED net_byte_order.c serial_framing_protocol.c)
