--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,18 @@
+# Serial Framing Protocol library
+# Barobo, Inc.
+
 cmake_minimum_required(VERSION 2.8.8)
 project(LIBSFP)
+
+##############################################################################
+# Platform Specific Setup
 
 if(NOT CMAKE_HOST_WIN32)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 endif(NOT CMAKE_HOST_WIN32)
+
+##############################################################################
+# Targets
 
 set(SRCS serial_framing_protocol.c net_byte_order.c)
 set(HEADERS serial_framing_protocol.h)
