installation script tweaks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,9 @@
 cmake_minimum_required(VERSION 2.8.8)
 project(LIBSFP)
 
-##############################################################################
-# Platform Specific Setup
-
-if(NOT CMAKE_HOST_WIN32)
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-endif(NOT CMAKE_HOST_WIN32)
+set(SFP_MAJOR_VERSION 0)
+set(SFP_MINOR_VERSION 0)
+set(SFP_VERSION ${SFP_MAJOR_VERSION}.${SFP_MINOR_VERSION})
 
 ##############################################################################
 # Targets
@@ -20,5 +17,14 @@ set(HEADERS serial_framing_protocol.h)
 add_library(sfpObjects OBJECT ${SRCS})
 add_library(sfp SHARED $<TARGET_OBJECTS:sfpObjects>)
 
+set_target_properties(sfp PROPERTIES VERSION ${SFP_VERSION} SOVERSION ${SFP_MAJOR_VERSION})
+
 install(TARGETS sfp RUNTIME DESTINATION bin LIBRARY DESTINATION lib)
 install(FILES ${HEADERS} DESTINATION include)
+
+##############################################################################
+# Platform Specific Setup
+
+if(NOT CMAKE_HOST_WIN32)
+  set_target_properties(sfpObjects PROPERTIES COMPILE_FLAGS "-fPIC")
+endif(NOT CMAKE_HOST_WIN32)
