--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,42 @@
 # Serial Framing Protocol library
 # Barobo, Inc.
 
-cmake_minimum_required(VERSION 2.8.8)
-project(LIBSFP)
+cmake_minimum_required(VERSION 2.8.9)
+project(sfp C)
 
-set(SFP_MAJOR_VERSION 0)
-set(SFP_MINOR_VERSION 0)
-set(SFP_VERSION ${SFP_MAJOR_VERSION}.${SFP_MINOR_VERSION})
+set(VERSION_MAJOR 0)
+set(VERSION_MINOR 0)
+set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR})
+
+# Expose our public interface to other subprojects in CMake.
+set(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
+  CACHE INTERNAL "${PROJECT_NAME}: public include directories" FORCE)
+
+message(${PROJECT_NAME}_INCLUDE_DIRS)
+include_directories(${${PROJECT_NAME}_INCLUDE_DIRS})
 
 ##############################################################################
 # Targets
 
-set(SRCS serial_framing_protocol.c net_byte_order.c)
-set(HEADERS serial_framing_protocol.h)
+file(GLOB SOURCES src/*.c)
+file(GLOB HEADERS include/*.h)
 
-add_library(sfpObjects OBJECT ${SRCS})
-add_library(sfp SHARED $<TARGET_OBJECTS:sfpObjects>)
+add_library(${PROJECT_NAME}-objs OBJECT ${SOURCES})
+add_library(${PROJECT_NAME} SHARED $<TARGET_OBJECTS:${PROJECT_NAME}-objs>)
 
-set_target_properties(sfp PROPERTIES VERSION ${SFP_VERSION} SOVERSION ${SFP_MAJOR_VERSION})
+# Although -fPIC is implied for SHARED targets, it is not for OBJECT targets,
+# and we must set this manually. TODO sfp needs to use PIC so we can link it
+# into libbarobo.so, but this will probably cause code bloat in the Linkbot
+# firmware. Set two different targets with an option to switch them.
+set_target_properties(${PROJECT_NAME}-objs
+  PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
-install(TARGETS sfp RUNTIME DESTINATION bin LIBRARY DESTINATION lib)
+set_target_properties(${PROJECT_NAME}
+  PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION_MAJOR})
+
+install(TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin)
+
 install(FILES ${HEADERS} DESTINATION include)
-
-##############################################################################
-# Platform Specific Setup
-
-if(NOT CMAKE_HOST_WIN32)
-  set_target_properties(sfpObjects PROPERTIES COMPILE_FLAGS "-fPIC")
-endif(NOT CMAKE_HOST_WIN32)
