--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(VERSION_MAJOR 0)
 set(VERSION_MINOR 0)
 set(VERSION_PATCH 0)
 
+# Boilerplate stuff
 string(TOLOWER ${PROJECT_NAME} project_name)
 set(EXPORT_TARGET_SET ${project_name}-targets)
 
@@ -48,24 +49,33 @@ install(TARGETS ${TARGET} EXPORT ${EXPORT_TARGET_SET}
 
 set(INSTALL_CMAKE_DIR lib/cmake/${project_name})
 
-# This must happen after INCLUDE_DIR and TARGET are set.
 include(CMakePackageConfigHelpers)
-configure_package_config_file(lib-config.cmake.in
-  "${PROJECT_BINARY_DIR}/${project_name}-config.cmake"
-  INSTALL_DESTINATION "${INSTALL_CMAKE_DIR}"
-  PATH_VARS INCLUDE_DIR)
 
 write_basic_package_version_file(
   "${PROJECT_BINARY_DIR}/${project_name}-config-version.cmake"
   VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
   COMPATIBILITY SameMajorVersion)
 
+# This must happen after INCLUDE_DIR and TARGET are set. The config file will
+# use these two variables.
+# Configure once for projects which are part of the same build as libsfp.
+configure_file(inbuildconfig.cmake.in
+  "${PROJECT_BINARY_DIR}/${project_name}-config.cmake" @ONLY)
+
+# And configure again for the final installation directory.
+configure_package_config_file(config.cmake.in
+  "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${project_name}-config.cmake"
+  INSTALL_DESTINATION "${INSTALL_CMAKE_DIR}"
+  PATH_VARS INCLUDE_DIR)
+
 install(FILES
-  "${PROJECT_BINARY_DIR}/${project_name}-config.cmake"
+  "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${project_name}-config.cmake"
   "${PROJECT_BINARY_DIR}/${project_name}-config-version.cmake"
   DESTINATION "${INSTALL_CMAKE_DIR}")
 
+# Generate a target export cmake script for projects in the same build.
 export(TARGETS ${TARGET} FILE "${PROJECT_BINARY_DIR}/${EXPORT_TARGET_SET}.cmake")
 export(PACKAGE ${PROJECT_NAME})
 
+# And generate another for the final installation directory.
 install(EXPORT ${EXPORT_TARGET_SET} DESTINATION "${INSTALL_CMAKE_DIR}")
