Adjust include directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,7 @@ set(VERSION_PATCH 2)
 set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
 ##############################################################################
-# Headers
-
-set(PUBLIC_INCLUDE_DIR include)
-include_directories(${PUBLIC_INCLUDE_DIR})
-
-##############################################################################
 # Targets
-
-set(TARGET sfp)
 
 # Sources need to be listed manually so CMake knows to regenerate the
 # build system when the list of sources changes.
@@ -26,13 +18,16 @@ set(SOURCES src/serial_framing_protocol.cpp )
 set_source_files_properties(${SOURCES} PROPERTIES COMPILE_FLAGS -std=c++11)
 
 # By default, we'll build a shared library, but the robot firmware needs to be
-# able to build a static library to link with. Providing a separate
-# ${TARGET}-static target isn't that useful, because the firmware uses an
-# entirely separate toolchain, so it will have a separate build directory.
+# able to build a static library to link with. Providing a separate sfp-static
+# target isn't that useful, because the firmware uses an entirely separate
+# toolchain, so it will have a separate build directory.
 option(BUILD_SHARED_LIBS "build shared libraries" OFF)
-add_library(${TARGET} ${SOURCES})
+add_library(sfp ${SOURCES})
 
-set_target_properties(${TARGET} PROPERTIES
+target_include_directories(sfp
+    PUBLIC include)
+
+set_target_properties(sfp PROPERTIES
   VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
   SOVERSION ${VERSION_MAJOR})
 
@@ -47,23 +42,12 @@ else()
   set(INSTALL_BIN_DIR .)
 endif()
 
-install(TARGETS ${TARGET}
+install(TARGETS sfp
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR})
 
-# TODO figure out what to do with the headers on install?
-#install(DIRECTORY ${PUBLIC_INCLUDE_DIR} DESTINATION .)
-
-##############################################################################
-# Configuration for dependent projects
-
-get_filename_component(${PROJECT_NAME}_INCLUDE_DIRS ${PUBLIC_INCLUDE_DIR} ABSOLUTE CACHE)
-set(${PROJECT_NAME}_LIBRARIES ${TARGET} CACHE INTERNAL "")
-set(${PROJECT_NAME}_VERSION ${VERSION} CACHE INTERNAL "")
-
-##############################################################################
 # Fix install-name for Mac libraries
-if(CMAKE_HOST_APPLE)
+if(APPLE)
   set_target_properties(sfp PROPERTIES INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib")
 endif()
