Depend on cxx-util for Callback/Signal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,22 @@ set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
 configure_file(config.h.in include/sfp/config.h)
 
+# Dependencies
+
+if(NOT DEFINED DEPS_ROOT)
+    if(DEFINED ENV{DEPS_ROOT})
+        set(DEPS_ROOT "$ENV{DEPS_ROOT}")
+    else()
+        message(FATAL_ERROR "Please set DEPS_ROOT to the location of your dependencies (libsfp, ribbon-bridge, etc.).")
+    endif()
+endif()
+
+function(add_dependency _name)
+    add_subdirectory(${DEPS_ROOT}/${_name} ${_name})
+endfunction()
+
+add_dependency(cxx-util)
+
 ##############################################################################
 # Targets
 
@@ -30,7 +46,9 @@ add_library(sfp ${SOURCES})
 
 target_include_directories(sfp
     PUBLIC include
-           ${PROJECT_BINARY_DIR}/include)
+           ${PROJECT_BINARY_DIR}/include
+           $<TARGET_PROPERTY:cxx-util,INTERFACE_INCLUDE_DIRECTORIES>
+           )
 
 set_target_properties(sfp PROPERTIES
   VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
