Copy in Mac staging tinkerings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,13 @@
 cmake_minimum_required(VERSION 2.8.9)
 
 set(target sfp)
+project(${target})
+
 if(TARGET ${target})
   # FIXME make sure that the current target's version or configuration matches?
   # this feels rather dangerous. find_package would solve this conundrum :/
-  message(FATAL_ERROR "libsfp already configured")
+  message(FATAL_ERROR "sfp already configured")
 endif()
-
-project(${target})
 
 option(SFP_BUILD_TESTS "Build libsfp tests" OFF)
 option(BUILD_SHARED_LIBS "build shared libraries" OFF)
@@ -23,7 +23,7 @@ set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 # libsfp has a library target, and optional tests
 
 set(sources src/serial_framing_protocol.cpp )
-set_source_files_properties(${SOURCES} PROPERTIES COMPILE_FLAGS -std=c++11)
+set_source_files_properties(${sources} PROPERTIES COMPILE_FLAGS -std=c++11)
 
 add_library(${target} ${sources})
 
@@ -36,10 +36,9 @@ endif()
 
 set_target_properties(${target} PROPERTIES
   VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
-  SOVERSION ${VERSION_MAJOR})
-if(APPLE)
-  set_target_properties(${target} PROPERTIES INSTALL_NAME_DIR "@executable_path")
-endif()
+  SOVERSION ${VERSION_MAJOR}
+  MACOSX_RPATH ON
+)
 
 target_include_directories(${target}
     PUBLIC include
@@ -47,21 +46,14 @@ target_include_directories(${target}
            $<TARGET_PROPERTY:cxx-util,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
-
 # Staging
 
 if(WIN32)
-  set(INSTALL_LIB_DIR .)
-  set(INSTALL_BIN_DIR .)
+  set(dest .)
 elseif(APPLE)
-  set(INSTALL_LIB_DIR Contents/MacOS)
-  set(INSTALL_BIN_DIR Contents/MacOS)
+  set(dest ../MacOS)
 else()
-  set(INSTALL_LIB_DIR lib)
-  set(INSTALL_BIN_DIR bin)
+  set(dest lib)
 endif()
 
-install(TARGETS ${target}
-  ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
-  LIBRARY DESTINATION ${INSTALL_LIB_DIR}
-  RUNTIME DESTINATION ${INSTALL_BIN_DIR})
+install(TARGETS ${target} DESTINATION ${dest})
