Don't install library by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,4 +70,4 @@ else()
   set(dest lib)
 endif()
 
-install(TARGETS ${target} DESTINATION ${dest})
+#install(TARGETS ${target} DESTINATION ${dest})
