Use Boost.Log for warnings, errors, and debug info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,10 @@ endif()
 option(SFP_BUILD_TESTS "Build libsfp tests" OFF)
 option(BUILD_SHARED_LIBS "build shared libraries" OFF)
 
+option(SFP_CONFIG_DEBUG "Enable SFP debugging messages" OFF)
+option(SFP_CONFIG_WARN "Enable SFP warnings" OFF)
+option(SFP_CONFIG_ERROR "Enable SFP errors" OFF)
+
 set(VERSION_MAJOR 0)
 set(VERSION_MINOR 3)
 set(VERSION_PATCH 0)
@@ -28,7 +32,7 @@ include(CheckCXXSourceCompiles)
 check_cxx_source_compiles("int main () { throw int(); }" HAVE_EXCEPTIONS)
 if(HAVE_EXCEPTIONS)
     set(Boost_USE_STATIC_LIBS ON)
-    find_package(Boost 1.54.0 REQUIRED COMPONENTS system)
+    find_package(Boost 1.54.0 REQUIRED COMPONENTS system filesystem log thread)
     list(APPEND sources src/system_error.cpp)
 endif()
 
